BOOTCAMP INTER JAVA DEVELOPER (DIO - DIGITAL INNOVATION ONE): FRAMEWORK SPRING BOOT / PROPERTIES / YAML / COMMAND LINE

--- a/bootcamp-inter-java-developer/springbootconfig/src/main/resources/application-prod.properties
+++ b/bootcamp-inter-java-developer/springbootconfig/src/main/resources/application-prod.properties
@@ -1,4 +1,5 @@
 #PROD environment
+server.port=8085
 
 app.message=This is the property file to the ${spring.application.name} specific to the PROD Environmet
 
